--- a/Projets.html
+++ b/Projets.html
@@ -22,7 +22,7 @@
   <body>
     <header>
       <nav>
-        <a target="_blank" href="Portfolio.html">
+        <a target="_blank" href="index.html">
           <img src="images/home_house_icon_143764.png" alt="icone accueil" />
         </a>
         <div>
