--- a/Contact.html
+++ b/Contact.html
@@ -32,12 +32,29 @@
       </nav>
     </header>
     <main>
-      <section class="texte-page">
+      <section id="contact" class="formulaire">
         <h1>CONTACTEZ-MOI</h1>
-        <p>
-          Actuellement en construction de mon site, je vous laisse pour le
-          moment me contacter via ma boîte mail : camilledoux93@gmail.com
-        </p>
+        <form method="get" action="">
+          <div class="nom-mail-tel">
+            <div class="form-column">
+              <label for="nom">Votre Nom</label
+              ><input type="text" name="nom" id="nom" autofocus required />
+            </div>
+            <div class="form-column">
+              <label for="mail">Votre mail</label>
+              <input type="mail" name="mail" id="mail" required />
+            </div>
+            <div class="form-column">
+              <label for="telephone">Votre téléphone (facultatif)</label>
+              <input type="tel" name="telephone" id="telephone" />
+            </div>
+          </div>
+          <div class="form-column">
+            <label for="message">Laissez-moi un message</label>
+            <input type="textarea" name="message" id="message" />
+          </div>
+          <input type="submit" value="Envoyer" class="bouton" />
+        </form>
       </section>
     </main>
     <footer></footer>
