modif taille photo

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </p>
           <a href="Contact.html" class="cta">CONTACTEZ-MOI</a>
         </div>
-        <img src="images/1704914261610.jpg" alt="photo profil" />
+        <div><img src="images/1704914261610.jpg" alt="photo profil" /></div>
       </section>
     </main>
     <footer></footer>
