--- a/Contact.html
+++ b/Contact.html
@@ -34,7 +34,8 @@
     <main>
       <section id="contact" class="formulaire">
         <h1>CONTACTEZ-MOI</h1>
-        <form method="get" action="">
+        <!-- formulaire en attente
+        <form method="post" action="">
           <div class="nom-mail-tel">
             <div class="form-column">
               <label for="nom">Votre Nom</label
@@ -55,6 +56,11 @@
           </div>
           <input type="submit" value="Envoyer" class="bouton" />
         </form>
+        -->
+        <p>
+          Le formulaire est en cours de création, je vous laisse en attendant,
+          m'envoyer un mail à : camilledoux93@gmail.com
+        </p>
       </section>
     </main>
     <footer></footer>
