--- a/index.html
+++ b/index.html
@@ -4,20 +4,11 @@
     <meta charset="utf-8" />
     <title>Doux Camille - Portfolio</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Truculenta:opsz,wght@12..72,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="style/style.css" rel="stylesheet" />
     <link href="style/index.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <header>
@@ -37,16 +28,10 @@
           <h1>Doux Camille</h1>
           <h2>Reconversion UI/UX Designer</h2>
           <p>
-            Après 10 ans comme infirmière, mes facultés relationnelles et mon
-            sens de l’organisation seront mes atouts sur un poste d’UX/UI
-            Designer. Avec une forte expérience en gestion de dossiers, combinée
-            à une aisance pour les outils technologiques et la fibre bricoleuse,
-            je recherche activement un nouveau défi professionnel.
+            Après 11 ans comme infirmière, je débute une formation pour obtenir le titre pro de concepteur designer UI. Mes facultés relationnelles et mon sens de l’organisation seront mes atouts sur un poste d’UX/UI Designer.
+J'ai envie de mettre a profit mes compétences, comme l'autonomie, l'empathie, la communication avec mes envies créatives et mon appétences pour les outils numériques. 
           </p>
-          <a href="Contact.html" class="cta">CONTACTEZ-MOI</a>
-        </div>
-        <div><img src="images/1704914261610.jpg" alt="photo profil" /></div>
-      </section>
+          <a href="Projets.html" class="cta">MES PROJETS</a>
     </main>
     <footer></footer>
   </body>
