--- a/Contact.html
+++ b/Contact.html
@@ -52,7 +52,7 @@
           Le formulaire est en cours de création, je vous laisse en attendant,
           m'envoyer un mail à : camilledoux93@gmail.com
         </p>
-        <img class="formulaire"
+        <img class="CV"
         src="CV_DOUXCamille.png" alt="CV">
       </section>
     </main>
