modif CV_suppression num téléphone

--- a/Contact.html
+++ b/Contact.html
@@ -53,7 +53,7 @@
           m'envoyer un mail à : camilledoux93@gmail.com
         </p>
         <img class="CV"
-        src="CV_DOUXCamille.png" alt="CV">
+        src="CV.jpg" alt="CV">
       </section>
     </main>
     <footer></footer>
