--- a/Projets.html
+++ b/Projets.html
@@ -27,8 +27,10 @@
       <section class="texte-page">
         <h1>Mes projets</h1>
         <p>
-         Ma formation ayant débuté le 12 Novembre 2024, j'alimente progessivement mon portfolio
+         Ma formation ayant débuté le 12 Novembre 2024, j'alimente progessivement mon portfolio : 
+        <a href="https://www.behance.net/gallery/216503957/Portfolio">Retrouvez le içi</a>
         </p>
+
         <embed src="C:\Users\c-dou\Documents\Portfolio\Portfolio_DouxCamille.pdf" type="application/pdf" width="100%" height="600px">
        
       </section>
