--- a/Projets.html
+++ b/Projets.html
@@ -31,7 +31,7 @@
         <a href="https://www.behance.net/gallery/216503957/Portfolio">Retrouvez le içi</a>
         </p>
 
-        <embed src="C:\Users\c-dou\Documents\Portfolio\Portfolio_DouxCamille.pdf" type="application/pdf" width="100%" height="600px">
+        <!--<embed src="C:\Users\c-dou\Documents\Portfolio\Portfolio_DouxCamille.pdf" type="application/pdf" width="100%" height="600px">--> 
        
       </section>
     </main>
