--- a/Projets.html
+++ b/Projets.html
@@ -28,7 +28,7 @@
         <h1>Mes projets</h1>
         <p>
          Ma formation ayant débuté le 12 Novembre 2024, j'alimente progessivement mon portfolio : 
-        <a href="https://www.behance.net/gallery/216503957/Portfolio">Retrouvez le içi</a>
+        <a target="_blank" href="https://www.behance.net/gallery/216503957/Portfolio">Retrouvez le içi</a>
         </p>
 
         <!--<embed src="C:\Users\c-dou\Documents\Portfolio\Portfolio_DouxCamille.pdf" type="application/pdf" width="100%" height="600px">--> 
