sup home dans un nouvel onglet

--- a/Projets.html
+++ b/Projets.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <nav>
-        <a target="_blank" href="index.html">
+        <a href="index.html">
           <img src="images/home_house_icon_143764.png" alt="icone accueil" />
         </a>
         <div>
