--- a/Contact.html
+++ b/Contact.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <title>Doux Camille - Portfolio</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link href="style/style.css" rel="stylesheet" />
     <link href="style/index.css" rel="stylesheet" />
   </head>
@@ -52,8 +55,7 @@
           Le formulaire est en cours de création, je vous laisse en attendant,
           m'envoyer un mail à : camilledoux93@gmail.com
         </p>
-        <img class="CV"
-        src="CV.jpg" alt="CV">
+        <img class="CV" src="CV.jpg" alt="CV" />
       </section>
     </main>
     <footer></footer>
