--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <title>Doux Camille - Portfolio</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link href="style/style.css" rel="stylesheet" />
     <link href="style/index.css" rel="stylesheet" />
   </head>
@@ -24,14 +27,18 @@
     </header>
     <main>
       <section class="présentation">
-        <div>
-          <h1>Doux Camille</h1>
-          <h2>Reconversion UI/UX Designer</h2>
-          <p>
-            Après 11 ans comme infirmière, je débute une formation pour obtenir le titre pro de concepteur designer UI. Mes facultés relationnelles et mon sens de l’organisation seront mes atouts sur un poste d’UX/UI Designer.
-J'ai envie de mettre a profit mes compétences, comme l'autonomie, l'empathie, la communication avec mes envies créatives et mon appétences pour les outils numériques. 
-          </p>
-          <a href="Projets.html" class="cta">MES PROJETS</a>
+        <h1>Doux Camille</h1>
+        <h2>Reconversion UI/UX Designer</h2>
+        <p>
+          Après 11 ans comme infirmière, je débute une formation pour obtenir le
+          titre pro de concepteur designer UI. Mes facultés relationnelles et
+          mon sens de l’organisation seront mes atouts sur un poste d’UX/UI
+          Designer. J'ai envie de mettre a profit mes compétences, comme
+          l'autonomie, l'empathie, la communication avec mes envies créatives et
+          mon appétences pour les outils numériques.
+        </p>
+        <a href="Projets.html" class="cta">MES PROJETS</a>
+      </section>
     </main>
     <footer></footer>
   </body>
