--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </header>
     <main>
       <section class="présentation">
+        <div>
         <h1>Doux Camille</h1>
         <h2>Reconversion UI/UX Designer</h2>
         <p>
