--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           mon appétences pour les outils numériques.
         </p>
         <a href="Projets.html" class="cta">MES PROJETS</a>
+      </div>
       </section>
     </main>
     <footer></footer>
