--- a/Contact.html
+++ b/Contact.html
@@ -58,6 +58,6 @@
         <img class="CV" src="CV.jpg" alt="CV" />
       </section>
     </main>
-    <footer></footer>
+    <footer>Camille 2025</footer>
   </body>
 </html>
