--- a/Projets.html
+++ b/Projets.html
@@ -41,6 +41,6 @@
         <!--<embed src="C:\Users\c-dou\Documents\Portfolio\Portfolio_DouxCamille.pdf" type="application/pdf" width="100%" height="600px">-->
       </section>
     </main>
-    <footer></footer>
+    <footer><p>Camille 2025</p></footer>
   </body>
 </html>
